<resources>
    <string name="app_name">Neco Arc Tamagotchi</string>
    <string name="title_home">Главная</string>
    <string name="title_kitchen">Кухня</string>
    <string name="title_entertainments">Веселье</string>
    <string name="title_medicine">Лекарства</string>
    <string name="title_bedroom">Спальня</string>
    <string name="button_feed_text">Покормить</string>
    <string name="button_take_medicine_text">Принять лекарство</string>
    <string name="toast_lack_of_energy_text">Недостаточно энергии</string>
    <string name="toast_lack_of_money_text">Недостаточно монет</string>
    <string name="settings_dialog_text">Настройки</string>
    <string name="music_settings_switch_text">Музыка</string>
    <string name="sfx_settings_switch_text">Звуковые эффекты</string>
    <string name="notification_title">Тамагочи</string>
    <string name="notification_message">Неко Арк нуждается в вашем внимании!</string>
    <string name="permission_dialog_title">Необходимы разрешения</string>
    <string name="permission_dialog_message">Это приложение требует разрешение на установку точных будильников. Пожалуйста, предоставьте его в настройках.</string>
    <string name="permission_dialog_positive_button_text">Перейти в настройки</string>
    <string name="permission_dialog_negative_button_text">Отмена</string>

    <string name="hunger_desc">Уровень голода</string>
    <string name="happiness_desc">Уровень счастья</string>
    <string name="health_desc">Уровень здоровья</string>
    <string name="energy_desc">Уровень энергии</string>
    <string name="scroll_feed_button_prev_desc">Переход к предыдущему блюду</string>
    <string name="scroll_feed_button_next_desc">Переход к следующему блюду</string>
    <string name="scroll_medicine_button_prev_desc">Переход к предыдущему лекарству</string>
    <string name="scroll_medicine_button_next_desc">Переход к следующему лекарству</string>
    <string name="lamp_desc">Настольная лампа-переключатель</string>
    <string name="dance_button_desc">Танцевать</string>
    <string name="flip_button_desc">Сальто</string>
    <string name="pepsi_toy_button_desc">Кошачья игрушка с пепси</string>
    <string name="background_desc">Фон</string>
    <string name="neco_arc_image_desc">Неко арк</string>
    <string name="settings_button_desc">Настройки</string>
    <string name="settings_close_button_desc">Закрыть настройки</string>
    <string name="mine_button_desc">Добыча монет</string>
    <string name="gold_ore_desc">Добыча золотой руды</string>
    <string name="mine_close_button_desc">Вернуться на главный экран</string>
    <string name="coin_desc">Количество монет</string>
    <string name="music_desc">Музыка</string>
    <string name="sfx_desc">Звуковые эффекты</string>
</resources>