<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_settings_dialog" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="15dp"
        android:textColor="@color/navigation_icon_color"
        android:textStyle="bold"
        android:text="@string/settings_dialog_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_action_button"
        android:src="@drawable/ic_close_button"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/settings_close_button_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/bg_settings_panel"
        app:layout_constraintTop_toBottomOf="@id/close_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/music_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            app:switchMinWidth="75dp"
            android:textSize="16sp"
            android:textColor="@color/action_button_text_color"
            android:textStyle="bold"
            android:text="@string/music_settings_switch_text" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sfx_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            app:switchMinWidth="75dp"
            android:textSize="16sp"
            android:textColor="@color/action_button_text_color"
            android:textStyle="bold"
            android:text="@string/sfx_settings_switch_text"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>