<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment"
    tools:context=".ui.fragments.KitchenFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/dish_slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/feed_button"/>

    <Button
        android:id="@+id/feed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_action_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_feed_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/action_button_text_color"
        android:padding="10sp"
        android:elevation="0dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/button_feed_text"/>

    <ImageButton
        android:id="@+id/feed_scroll_button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_scroll_button"
        android:src="@drawable/ic_arrow"
        app:layout_constraintLeft_toLeftOf="@id/dish_slider"
        app:layout_constraintTop_toTopOf="@id/dish_slider"
        app:layout_constraintBottom_toBottomOf="@id/dish_slider"
        android:contentDescription="@string/scroll_feed_button_prev_desc"
        android:scaleX="-1" />

    <ImageButton
        android:id="@+id/feed_scroll_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_scroll_button"
        android:src="@drawable/ic_arrow"
        app:layout_constraintRight_toRightOf="@id/dish_slider"
        app:layout_constraintTop_toTopOf="@id/dish_slider"
        app:layout_constraintBottom_toBottomOf="@id/dish_slider"
        android:contentDescription="@string/scroll_feed_button_next_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>