<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MineActivity"
    android:background="@color/mine_background_color" >

    <ImageView
        android:id="@+id/mine_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_mine_activity"
        android:scaleType="centerCrop"/>

    <ImageButton
        android:id="@+id/gold_ore"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/sprite_gold_ore"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:contentDescription="@string/gold_ore_desc" />

    <ProgressBar
        android:id="@+id/mining_progress"
        android:layout_width="250dp"
        android:layout_height="36dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/rounded_progress_bar"
        app:layout_constraintBottom_toTopOf="@id/gold_ore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/mine_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close_button"
        android:background="@drawable/bg_action_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/mine_close_button_desc" />

    <LinearLayout
        android:id="@+id/mine_money_panel"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gold_ore"
        android:layout_margin="5dp"
        android:background="@drawable/bg_money_panel"
        android:gravity="end" >

        <TextView
            android:id="@+id/mine_money_count_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical|end"
            android:layout_gravity="center_vertical"
            android:textColor="@color/action_button_text_color"
            android:textStyle="bold"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/sprite_coin"
            android:contentDescription="@string/coin_desc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>